syntax = "proto3";

package com.corporatebanking.nickname;

option java_multiple_files = true;
option java_package = "com.corporatebanking.nickname.grpc";
option java_outer_classname = "NicknameProto";

service NicknameService {
  rpc CreateNickname(CreateNicknameRequest) returns (NicknameResponse);
  
  rpc GetNickname(GetNicknameRequest) returns (NicknameResponse);
  
  rpc GetAllNicknames(GetAllNicknamesRequest) returns (NicknameListResponse);
  
  rpc UpdateNickname(UpdateNicknameRequest) returns (NicknameResponse);
  
  rpc DeleteNickname(DeleteNicknameRequest) returns (DeleteNicknameResponse);
}

message NicknameResponse {
  int64 id = 1;
  int64 from_account = 2;
  int64 to_account = 3;
  string nickname = 4;
  string created_at = 5;
  string updated_at = 6;
  int64 created_by = 7;
  int64 updated_by = 8;
}

message CreateNicknameRequest {
  int64 from_account = 1;
  int64 to_account = 2;
  string nickname = 3;
  int64 created_by = 4;
}

message GetNicknameRequest {
  int64 to_account = 1;
}

message GetAllNicknamesRequest {}

message UpdateNicknameRequest {
  int64 to_account = 1;
  string nickname = 2;
  int64 updated_by = 3;
}

message DeleteNicknameRequest {
  int64 to_account = 1;
}

message NicknameListResponse {
  repeated NicknameResponse Nicknames = 1;
}

message DeleteNicknameResponse {
  string message = 1;
}
